--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,7 +2,7 @@
     <body id="homepage" itemscope itemtype="http://schema.org/Blog">
 
         <!-- Navbar -->
-        {{ partial "navbar.html" }}
+        {{ partial "navbar.html" . }}
         {{ partial "header.html" . }}
 
         {{ if .Site.Params.author }}<meta itemprop="author" content="{{ .Site.Params.author }}" />{{ end }}
@@ -14,20 +14,20 @@
         <div id="last-updates">
 
             {{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
-            <h2 class="sr-only">Last Update <var>{{ .Paginator.PageNumber }}/{{ .Paginator.TotalPages }}</var></h2>
+            <h2 class="sr-only">{{title $.Site.Data.locale.lastUpdate }} <var>{{ .Paginator.PageNumber }}&#47;{{ .Paginator.TotalPages }}</var></h2>
             {{ partial "last-updates.html" . }}
 
             <!-- index pagination -->
             <nav class="pagination">
-                {{ if .Paginator.HasPrev }}<div class="inline"><a href="{{ .Paginator.Prev.Url }}" aria-label="Articles plus récents" title="Articles plus récents"><span aria-visibility="hidden">&laquo;</span></a></div>{{ end }}
-                <div class="inline"><a href="{{ .Site.BaseUrl }}" aria-label="Revenir à l'accueil" title="Revenir à l'accueil" itemprop="url">
+                {{ if .Paginator.HasPrev }}<div class="inline"><a href="{{ .Paginator.Prev.Url }}" aria-label="{{ $.Site.Data.locale.newerPosts }}" title="{{ $.Site.Data.locale.newerPosts }}"><span aria-visibility="hidden">&laquo;</span></a></div>{{ end }}
+                <div class="inline"><a href="{{ .Site.BaseUrl }}" aria-label="{{ $.Site.Data.locale.backToHome }}" title="{{ $.Site.Data.locale.backToHome }}" itemprop="url">
                     <svg  class="icon small icon-home" viewBox="0 0 100 100">
                         <path d="M 0 100 L 0 50 L 50 0 L 100 50 L 100 100 L 65 100 L 65 70 L 45 70 L 45 100 Z" stroke="none" />
                     </svg>
                 </a></div>
-                {{ if .Paginator.HasNext }}<div class="inline"><a href="{{ .Paginator.Next.Url }}" aria-label="Articles plus anciens" title="Articles plus anciens"><span aria-visibility="hidden">&raquo;</span></a></div>{{ end }}
+                {{ if .Paginator.HasNext }}<div class="inline"><a href="{{ .Paginator.Next.Url }}" aria-label="{{ $.Site.Data.locale.olderPosts }}" title="{{ $.Site.Data.locale.olderPosts }}"><span aria-visibility="hidden">&raquo;</span></a></div>{{ end }}
             </nav>
-            
+
         </div>
 
         {{ partial "footer.html" . }}
