--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,7 +4,7 @@
 
                     <!-- Footer menu -->
                     <nav id="footer-menu">
-                        <h2 class="sr-only">Navigation de pied de page</h2>
+                        <h2 class="sr-only">{{title $.Site.Data.locale.footerNavigation }}</h2>
                         <ul>
                             {{ range .Site.Menus.footer }}
                                 <li><a href="{{.Url}}"> {{ .Name }} </a></li>
@@ -14,10 +14,7 @@
 
                     <footer id="fold" role="contentinfo">
                         <p id="copyright">&copy;<span itemprop="copyrightYear">{{ .Now.Format "2006" }}</span> - <span itemprop="copyrightHolder">{{ .Site.Copyright }}</span></p>
-                        <p>
-                            <small>Site réalisé avec <a href="http://gohugo.io">Hugo</a>.
-                            Template <a href="https://github.com/vuzonp/hugo-theme-aeris">æris</a>
-                            créé par <a href="http://www.thomasgirard.fr">Thomas Girard</a></small>
+                        <p><small>{{title $.Site.Data.locale.template }} <a href="https://github.com/vuzonp/hugo-theme-aeris">æris</a> {{ $.Site.Data.locale.createdBy }} <a href="http://www.thomasgirard.fr">Thomas Girard</a>, {{ $.Site.Data.locale.using }} <a href="http://gohugo.io">Hugo</a>.</small>
                         </p>
                     </footer>
 
