--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -1,53 +1,33 @@
-<!DOCTYPE html>
-<html lang="{{ .Site.Params.lang }}">
-    <head>
-        {{ partial "head.html" . }}
-    </head>
+{{ partial "head.html" . }}
     <body id="singlepage" role="document" itemscope itemtype="http://schema.org/Article">
 
         <!-- Navbar -->
         {{ partial "navbar.html" . }}
+        {{ partial "header-minimal.html" . }}
 
-        <div id="main-wrapper">
-            <div id="row-wrapper">
-                <!-- Menu -->
-                {{ partial "menu.html" . }}
+        <meta itemprop="url" content="{{ .Permalink }}" />
+        <meta itemprop="wordCount" content="{{ .WordCount }}" />
+        <meta itemprop="timeRequired" content="P{{ .ReadingTime }}M" />
+        {{ if .Description }}<meta itemprop="description" content="{{ .Description }}" />{{ end }}
+        {{ if .Params.author }}<meta itemprop="author" content="{{ .Params.author }}" />
+        {{ else }}<meta itemprop="author" content="{{ .Site.Params.author }}" />{{ end }}
+        {{ if .Params.lang }}<meta itemprop="inLanguage" content="{{ .Params.lang }}" />{{ end }}
 
-                <div id="content-wrapper">
-                    <main role="main">
-                        <article id="content"  role="article"{{ if .Params.lang }} lang="{{ .Params.lang }}"{{ end }}>
-                            <header>
-                                <h1 id="headline" itemprop="headline">{{ .Title }}</h1>
+        <article class="post" role="article"{{ if .Params.lang }} lang="{{ .Params.lang }}"{{ end }}>
+            <header>
+                <h1 id="headline" itemprop="headline">{{ .Title }}</h1>
+            </header>
+            {{ if .Params.notoc }}
+            <nav id="toc">
+                {{ .TableOfContents }}
+            </nav>
+            {{ end }}
 
-                                {{ partial "draft.html" . }}
-                                <!-- microdata -->
-                                <meta itemprop="url" content="{{ .Permalink }}" />
-                                <meta itemprop="wordCount" content="{{ .WordCount }}" />
-                                <meta itemprop="timeRequired" content="P{{ .ReadingTime }}M" />
-                                {{ if .Description }}<meta itemprop="description" content="{{ .Description }}" />{{ end }}
-                                {{ if .Params.author }}<meta itemprop="author" content="{{ .Params.author }}" />
-                                {{ else }}<meta itemprop="author" content="{{ .Site.Params.author }}" />{{ end }}
-                                {{ if .Params.lang }}<meta itemprop="inLanguage" content="{{ .Params.lang }}" />{{ end }}
-
-                            </header>
-                            {{ if .Params.notoc }}
-                            <nav id="toc">
-                                {{ .TableOfContents }}
-                            </nav>
-                            {{ end }}
-                            {{ if .Params.picture }}
-                            <figure class="post-picture">
-                                <img src="{{ .Params.picture }}"{{ if .Params.pictureHD }} srcset="{{ .Params.pictureHD }} 2x"{{ end }} alt="" />
-                            </figure>
-                            {{ end }}
-                            <div class="page-content" itemprop="articleBody">
-                                {{ .Content }}
-                            </div>
-                        </article>
-                    </main>
-                    {{ partial "footer.html" . }}
-                </div>
+            <div class="page-content" itemprop="articleBody">
+                {{ .Content }}
             </div>
-        </div>
+        </article>
+
+        {{ partial "footer.html" . }}
     </body>
 </html>
