--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -2,7 +2,7 @@
                     </main>
                     <hr class="sr-only" />
 
-                    <!-- Footer menu -->
+                    <!-- Footer menu --
                     <nav id="footer-menu">
                         <h2 class="sr-only">{{title $.Site.Data.locale.footerNavigation }}</h2>
                         <ul>
@@ -10,9 +10,10 @@
                                 <li><a href="{{.Url}}"> {{ .Name }} </a></li>
                             {{end}}
                         </ul>
-                    </nav>
+                    </nav>-->
 
                     <footer id="fold" role="contentinfo">
+                        <div><a href="#top" class="back-top" title="{{title $.Site.Data.locale.ascend }}"><span class="sr-only">{{title $.Site.Data.locale.ascend }}</span>&uarr;</a></div>
                         <p id="copyright">&copy;<span itemprop="copyrightYear">{{ .Now.Format "2006" }}</span> - <span itemprop="copyrightHolder">{{ .Site.Copyright }}</span></p>
                         <p><small>{{title $.Site.Data.locale.template }} <a href="https://github.com/vuzonp/hugo-theme-aeris">æris</a> {{ $.Site.Data.locale.createdBy }} <a href="http://www.thomasgirard.fr">Thomas Girard</a>, {{ $.Site.Data.locale.using }} <a href="http://gohugo.io">Hugo</a>.</small>
                         </p>
