--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -1,3 +1,4 @@
+/*! aeris-static v0.2.0 | (c) 2015, Thomas Girard | http://opensource.org/licenses/MIT */
 #banner {
 
     /*-webkit-animation: welcome 8s linear 0s;
