--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -3,7 +3,7 @@
                     <header id="banner" role="banner">
                         <div class="headline">
 
-                            <object data="/media/banner-shrew.svg" type="image/svg+xml" width="400" heigh="400">
+                            <object data="/media/banner-shrew.svg" type="image/svg+xml" width="400" height="400">
                                 <embed src="/media/banner-shrew.svg" type="image/svg+xml" width="400" height="400" pluginspage="http://www.adobe.com/svg/viewer/install/" />
                             </object>
                             <h1 id="sitename" aria-label="{{ $.Site.Data.locale.sitename }}">{{title .Site.Title }}</h1>
