--- a/layouts/post/single.html
+++ b/layouts/post/single.html
@@ -42,13 +42,13 @@
 
         <nav class="pagination">
             {{ if .PrevInSection }}
-            <div class="inline"><a href="{{ .PrevInSection.Permalink }}" title="Précédent : {{ .PrevInSection.LinkTitle }}" aria-label="Article Précédent"><span aria-visibility="hidden">&laquo;</span></a></div>
+            <div class="inline"><a href="{{ .PrevInSection.Permalink }}" title="Précédent : {{ .PrevInSection.LinkTitle }}"><span aria-hidden="true" aria-label="Article Précédent">&laquo;</span></a></div>
             {{ end }}
             <div class="inline">
-                <a href="{{ .Site.BaseUrl }}/{{ .Section }}/" title="Catégorie : {{ .Section }}"><span aria-visibility="hidden" aria-label="Remonter dans la catégorie parent">&sect;</span></a>
+                <a href="{{ .Site.BaseUrl }}/{{ .Section }}/" title="Catégorie : {{ .Section }}"><span aria-hidden="true" aria-label="Remonter dans la catégorie parent">&sect;</span></a>
             </div>
             {{ if .NextInSection }}
-            <div class="inline"><a href="{{ .NextInSection.Permalink }}" title="Suivant : {{ .NextInSection.LinkTitle }}" aria-label="Article Suivant"><span aria-visibility="hidden">&raquo;</span></a></div>
+            <div class="inline"><a href="{{ .NextInSection.Permalink }}" title="Suivant : {{ .NextInSection.LinkTitle }}"><span aria-hidden="true" aria-label="Article Suivant">&raquo;</span></a></div>
             {{ end }}
         </nav>
 
