--- a/layouts/partials/main-menu.html
+++ b/layouts/partials/main-menu.html
@@ -1,11 +1,8 @@
 
                 <nav id="menu" class="column" role="navigation">
                     <h2 class="sr-only">{{title $.Site.Data.locale.primaryNavigation }}</h2>
-                    <ul>
-                        <li><a href="{{ .Site.BaseUrl }}" tabindex="2" accesskey="1" title="" aria-label="{{ $.Site.Data.locale.sitename }}">{{title $.Site.Data.locale.home }}</a></li>
-                        <li><a href="/post/">Blog</a></li>
-                    </ul>
                     <ul class="sidebar-menu">
+                        <li><a href="{{ .Site.BaseUrl }}" tabindex="2" accesskey="1" title="" aria-label="{{ $.Site.Data.locale.sitename }}"><strong>{{title $.Site.Data.locale.home }}</strong></a></li>
                         {{ range .Site.Menus.main }}
                     		<li><a href="{{.Url}}">{{ .Pre }}{{ .Name }}{{ .Post }}</a></li>
                     	{{end}}
