Improved visual menu and banner

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -44,4 +44,9 @@
         <meta property="og:description" content="{{ .Description }}" />
         <meta name="twitter:description" content="{{ .Description }}" />
         {{ end }}
+
+        <script>
+            var w = document.getElementById('main-wrapper');
+            w.classList.add('closed');
+        </script>
     </head>
