--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -20,6 +20,7 @@
                             <g stroke="none">
                                 <rect x="0" y="10" width="100" height="15" />
                                 <rect x="0" y="40" width="100" height="15" />
+                                <rect x="0" y="40" width="100" height="15" />
                                 <rect x="0" y="70" width="100" height="15" />
                             </g>
                         </svg>
