--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -2,7 +2,7 @@
                     <!-- Banner -->
                     <header id="banner" role="banner">
                         <div class="headline">
-                            <iframe src="/media/banner-shrew.svg" type="image/svg+xml">
+                            <iframe src="/media/banner-shrew.svg">
                                 <embed src="/media/banner-shrew.svg" type="image/svg+xml" pluginspage="http://www.adobe.com/svg/viewer/install/" />
                             </iframe>
                             <h1 id="sitename" aria-label="{{ $.Site.Data.locale.sitename }}">{{title .Site.Title }}</h1>
