--- a/layouts/partials/navbar.html
+++ b/layouts/partials/navbar.html
@@ -74,3 +74,4 @@
                 {{ partial "main-menu.html" . }}
 
                 <div id="sheet" class="column">
+                    <div id="top"></div>
