--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -13,7 +13,7 @@
                     </nav>-->
 
                     <footer id="fold" role="contentinfo">
-                        <div><a href="{{ .Permalink }}#top" class="back-top" title="{{title $.Site.Data.locale.ascend }}"><span class="sr-only">{{title $.Site.Data.locale.ascend }}</span>&uarr;</a></div>
+                        <div><a href="{{ .Permalink }}#top" id="back-top" title="{{title $.Site.Data.locale.ascend }}"><span class="sr-only">{{title $.Site.Data.locale.ascend }}</span>&uarr;</a></div>
                         <p id="copyright">&copy;<span itemprop="copyrightYear">{{ .Now.Format "2006" }}</span> - <span itemprop="copyrightHolder">{{ .Site.Copyright }}</span></p>
                         <p><small>{{title $.Site.Data.locale.template }} <a href="https://github.com/vuzonp/hugo-theme-aeris">æris</a> {{ $.Site.Data.locale.createdBy }} <a href="http://www.thomasgirard.fr">Thomas Girard</a>, {{ $.Site.Data.locale.using }} <a href="http://gohugo.io">Hugo</a>.</small>
                         </p>
@@ -28,9 +28,3 @@
     {{ if in $burl "localhost"}}<script src="http://0.0.0.0:8080/js/aeris.min.js"></script>{{ else }}
     <script src="https://vuzonp.github.io/aeris-static/dist/js/aeris.min.js"></script>{{ end }}
     <script>Æ.setup();</script>
-
-    {{ if eq .Params.colorscheme true }}
-    <link rel="stylesheet" href="https://yandex.st/highlightjs/8.0/styles/default.min.css" />
-    <script src="https://yandex.st/highlightjs/8.0/highlight.min.js"></script>
-    <script>hljs.initHighlightingOnLoad();</script>
-    {{ end }}
